--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -17,6 +17,7 @@
         "share_on_pinterest": "Pin on Pinterest"
       },
       "links": {
+        "follow_us": "Follow us",
         "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
