--- a/locales/pl.json
+++ b/locales/pl.json
@@ -17,6 +17,7 @@
         "share_on_pinterest": "Przypnij do tablicy Pinterest"
       },
       "links": {
+        "follow_us": "Obserwuj nas",
         "twitter": "X (Twitter)",
         "facebook": "Facebook",
         "pinterest": "Pinterest",
