Add newsletter and update design

--- a/locales/pl.json
+++ b/locales/pl.json
@@ -60,8 +60,8 @@
   },
   "newsletter": {
     "label": "E-mail",
-    "success": "Dziękujemy za subskrypcję",
-    "button_label": "Subskrybuj"
+    "success": "Dziękujemy za zapisanie się",
+    "button_label": "Zapisz się"
   },
   "accessibility": {
     "skip_to_text": "Przejdź do treści",
