--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -266,6 +266,15 @@
     }
   },
   "sections": {
+    "comparison": {
+      "name": "Comparison",
+      "table_label": "Product comparison table",
+      "feature_column": "Feature",
+      "barkmate_column": "Barkmate",
+      "other_column": "Other mats",
+      "barkmate_logo_alt": "Barkmate logo",
+      "other_mats": "Other mats"
+    },
     "announcements": {
       "previous_announcement": "Previous announcement",
       "next_announcement": "Next announcement",
